--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "loopback-boot": "^2.0.0",
     "loopback-component-explorer": "^2.1.0",
     "loopback-component-passport": "^2.2.0",
+    "loopback-connector-mongodb": "^3.4.4",
     "passport": "^0.2.0",
     "passport-facebook": "^1.0.3",
     "passport-google-oauth": "^0.1.5",
